--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -171,6 +171,10 @@ label{ display:block; margin-top:15px; }
   width:100%;
 }
 
+.appImg:hover{
+  border:1px solid red;
+}
+
 #app-viewer-background{
   width:100%;
   height:100%;
