another hidden iframe

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -263,9 +263,13 @@
         </div>
     </div>
     
-    <!-- hidden iframe used for cross-domain requests-->
+    <!-- hidden iframes used for cross-domain requests-->
     <iframe name="getAppConf" id="getAppConf" 
         src="http://assets.getuniboard.com/publishing/proxy/get-app-config.html" 
+        style="display:none"></iframe>
+        
+    <iframe name="getApps" id="getApps" 
+        src="http://assets.getuniboard.com/publishing/proxy/get-apps.html" 
         style="display:none"></iframe>
 </body>
 </html>
