--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -209,9 +209,12 @@
                 </div>
                 
                 <div class="menu-box-center menu-box">
-                    <div class="menu-button" id="menu-button-previous" title="Previous page" alt="Previous page button"></div>
-                    <div class="menu-button" id="menu-button-index" title="Show the index" alt="Show index button"></div>
-                    <div class="menu-button" id="menu-button-next" title="Next page" alt="Next page button"></div>
+                    <div class="menu-button" id="menu-button-previous" title="Previous page" 
+                        alt="Previous page button"></div>
+                    <div class="menu-button" id="menu-button-index" title="Show the index" 
+                        alt="Show index button"></div>
+                    <div class="menu-button" id="menu-button-next" title="Next page" 
+                        alt="Next page button"></div>
                 </div>
                 
                 <div class="menu-box-right menu-box">
