app viewer styling

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -127,7 +127,7 @@
                         </div>
                         <div id="app-border-middle">
                             <div class="middle-left"></div>
-                            <img style="position:absolute;left:50%;margin-left:-10px; top:100%; margin-top:-20px" src="/uniboard-player/images/app-view.png">
+                            <!--<img style="position:absolute;left:50%;margin-left:-10px; top:100%; margin-top:-20px" src="/uniboard-player/images/app-view.png">-->
                             <div class="middle-right"></div>
                         </div>
                         <div id="app-border-bottom">
