--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -405,6 +405,10 @@ label{ display:block; margin-top:15px; }
   font-family:helvetica, arial, sans-serif;
 }
 
+.appImg{
+    cursor:pointer;
+}
+
 /*  App border  */
 #app-border-top{width:100%;height:7px}
     .middle.top{background:url(../images/top.png)}
