--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -83,7 +83,8 @@
         });
       
         // The current document has to be resized after the stylesheets have been loaded
-        setTimeout(function(){jQuery(window).resize()}, 500); 
+        //setTimeout(function(){jQuery(window).resize()}, 500);
+        jQuery(window).resize();
     });
 	
 	</script>
